--- a/Hands-on-With-Numpy.ipynb
+++ b/Hands-on-With-Numpy.ipynb
@@ -6,7 +6,7 @@
         "id": "dzNng6vCL9eP"
       },
       "source": [
-        "#CS231n Python Tutorial With Google Colab"
+        "# Hands on With Numpy"
       ]
     },
     {
@@ -15,7 +15,6 @@
         "id": "3cfrOV4dL9hW"
       },
       "source": [
-        "## Hands on With Numpy"
       ]
     },
     {
